--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^4.1.3",
+    "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "nanoid": "^3.1.29",
